# catflow-service-videosplit

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
catflow_service_videosplit/: __init__.py  worker.py
tests/: conftest.py  test_handler.py  test_import.py
tests/test_files/: README.md
