[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "catflow-service-videosplit"
dynamic = ["version"]
readme = "README.md"
description = "Consumer/publisher loop for workers in an object recognition pipeline"
authors = [{ name = "Ian Kilgore", email = "iank@iank.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "catflow-worker",
  "aiofiles",
  "opencv-python-headless",
]

[tool.setuptools]
packages = ["catflow_service_videosplit"]

[project.scripts]
catflow-service-videosplit = "catflow_service_videosplit:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools_scm]
write_to = "catflow_service_videosplit/_version.py"
