[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "catflow-service-videosplit"
dynamic = ["version"]
readme = "README.md"
description = "Video splitting service for an object recognition pipeline"
authors = [{ name = "Ian Kilgore", email = "iank@iank.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
  "catflow-worker>=0.1.5",
  "aiofiles",
  "opencv-python-headless",
]

[tool.setuptools]
packages = ["catflow_service_videosplit"]

[project.scripts]
catflow-service-videosplit = "catflow_service_videosplit:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-datafiles",
  "moto",
]

[tool.setuptools_scm]
write_to = "catflow_service_videosplit/_version.py"
